2008-02-25  Johannes Schmid <jhs@gnome.org>

	* tagmanager/entry.c: (updateSortedFlag), (isCtagsLine),
	(copyBytes), (copyFile), (openTagFile), (makeTagEntry):
	Never call error() which calls exit()
	#517646 – Anjuta exists with code 2 when i try to import gedit

2008-02-23  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (ieditor_insert):
	Block insert_text signal when inserting manually.

2008-02-23  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Fixed a problem with the "insert-text" signal that broke
	copy&paste sometimes

2008-02-22  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base):
	More fixes for comment handling and made the code
	a lot simpler

2008-02-22  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Fixed #517919 – Crash on pasting docblock

2008-02-20  Johannes Schmid <jhs@gnome.org>

  Patch from James Liggett:
	* plugins/profiler/profiler.glade:
	Fix width options dialog. Translations are not longer cut off. (#516630)

2008-02-18  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c: (on_insert_text):
	Do not change the iterator in the "insert-text" handler because
	it has some strange side-effects when copying text
	Fix useless free'ing in hover-leave that might have led to random
	crashes

2008-02-18  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/start.c:
	Avoid a glib warning if no project is loaded

2008-02-18  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/anjuta-manual/C/debugger.xml:
	Remove warning about new debugger

2008-02-17  Johannes Schmid <jhs@gnome.org>

	* manuals/anjuta-manual/figures/project-window.png:	
	Use a smaller picture

2008-02-17  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/gdb/debugger.c:
	Set breakpoint in file with uncommon characters in path name

2008-02-17  Johannes Schmid <jhs@gnome.org>
